// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemarkUtils and LinkUtils findAnchors one block anchor: bond 1`] = `
Array [
  Object {
    "id": "block-anchor",
    "position": Position {
      "end": Object {
        "column": 53,
        "line": 2,
        "offset": 98,
      },
      "indent": Array [],
      "start": Object {
        "column": 40,
        "line": 2,
        "offset": 85,
      },
    },
    "type": "blockAnchor",
    "value": "^block-anchor",
  },
]
`;

exports[`RemarkUtils and LinkUtils findAnchors one header: bond 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "position": Position {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "indent": Array [],
          "start": Object {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "text",
        "value": "h1",
      },
    ],
    "depth": 1,
    "position": Position {
      "end": Object {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "indent": Array [],
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "heading",
  },
]
`;

exports[`RemarkUtils and LinkUtils findLinks empty link 1`] = `Array []`;

exports[`RemarkUtils and LinkUtils findLinks one link: bond 1`] = `
Array [
  Object {
    "alias": "bar",
    "from": Object {
      "fname": "foo",
      "id": "foo",
      "vault": Object {
        "fsPath": "vault1",
      },
    },
    "original": "bar",
    "pos": Object {
      "end": 7,
      "start": 0,
    },
    "to": Object {
      "anchorHeader": undefined,
      "fname": "bar",
      "vault": undefined,
    },
    "type": "wiki",
    "value": "bar",
  },
]
`;

exports[`RemarkUtils and LinkUtils findLinks xvault link 1`] = `
Array [
  Object {
    "alias": "bar",
    "from": Object {
      "fname": "foo",
      "id": "foo",
      "vault": Object {
        "fsPath": "vault1",
      },
    },
    "original": "bar",
    "pos": Object {
      "end": 24,
      "start": 0,
    },
    "to": Object {
      "anchorHeader": undefined,
      "fname": "bar",
      "vault": Object {
        "fsPath": "vault2",
      },
    },
    "type": "wiki",
    "value": "bar",
  },
]
`;
